--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
   width: 90%;
     margin: 25px auto 0;
     height: 50vh;
-    background: greenyellow;
+    border: 1px solid green;
 }
 
 .game_page-menu {
@@ -55,18 +55,24 @@ button {
 }
 
 .word__item {
-  margin: 0 auto;
-  /* border-right: 1px solid green; */
-  text-align: center;
-  box-sizing: border-box;
-  position: relative;
+    line-height: 2;
+    font-size: 18px;
+    border: 1px solid #11740a;
+    background: rgba(68, 149, 0, 0.43);
+    border-radius: 5px;
 }
 
-.word__item:after {
-  content: '';
-  height: 100%;
-  width: 1px;
-  background-color: green;
-  position: absolute;
-  right: 0;
+.word__puzzle {
+    line-height: 2;
+    font-size: 18px;
+    border: 1px solid #11740a;
+    background: rgba(68, 149, 0, 0.43);;
+    border-radius: 5px;
+}
+
+.result-container__puzzle {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: start;
 }
